--- a/setup-servers.yml
+++ b/setup-servers.yml
@@ -19,6 +19,23 @@
       update_cache: yes
     when: ansible_distribution == "Archlinux"
 
+- hosts: workstations
+  become: true
+  tasks:
+  - name: install unzip
+    package:
+      name: unzip
+
+# terraform will be installed on workstations ie. your system
+  - name: install terraform
+    unarchive:
+        src: https://releases.hashicorp.com/terraform/0.12.28/terraform_0.12.28_linux_amd64.zip
+        dest: /usr/local/bin
+        remote_src: yes
+        mode: 0755
+        owner: root
+        group: root
+
 # installing apache and php on web_servers group hosts/servers 
 - hosts: web_servers
   become: true
