--- a/setup-servers.yml
+++ b/setup-servers.yml
@@ -42,7 +42,7 @@
   tasks: 
 
   - name: install apache and php for mint servers
-    tags: apache,apache2,mint 
+    tags: apache,apache2,mint
     apt:
       name:
         - apache2
@@ -60,6 +60,33 @@
         - firewalld
       state: latest
     when: ansible_distribution == "Archlinux"
+
+  # starting and enableling the apache service
+  - name: start apache (in mint)
+    tags: apache2,apache,mint
+    service:
+      name: apache2
+      state: started
+      enabled: yes
+    when: ansible_distribution == "Linux Mint"
+
+  # making changes to the apache configuration file
+  - name: change KeepAliveTimout configuration variable
+    tags: apache,apache2,mint
+    lineinfile:
+      path: /etc/apache2/apache2.conf
+      regexp: '^KeepAliveTimeout'
+      line: KeepAliveTimeout 10
+    when: ansible_distribution == "Linux Mint"
+    register: apacheState    # this is a variable which stores the state of the service
+
+  # restarting the apache service
+  - name: restart apache service
+    tags: apache,apache2,mint
+    service:
+      name: apache2
+      state: restarted
+    when: apacheState.changed   # checking if the apacheState is changed or not
 
   - name: copy default html file for site
     tags: apache,apache2
